k8s-resources/kube-dashboard/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - dashboard.tools.analytics.kops.integration.dsd.io
    secretName: kube-dashboard-tls
  rules:
  - host: dashboard.tools.analytics.kops.integration.dsd.io
    http:
      paths:
      - backend:
          serviceName: dashboard-head
          servicePort: 80
        path: /
